[package]
name = "safepkt_b7de9e5f7a"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "CJDNS SASU"]
edition = "2018"

[dependencies]
# verification-annotations = { git="https://github.com/thierrymarianne/contrib-rust-verification-tools.git", rev="e2f3c5c65a77" }
ink_primitives = { version = "2.1.0", git="https://github.com/paritytech/ink.git", rev="v2.1.0", default-features = false }
ink_abi = { version = "2.1.0", git="https://github.com/paritytech/ink.git", rev="v2.1.0", default-features = false, features = ["derive"], optional = true }
ink_core = { version = "2.1.0", git="https://github.com/paritytech/ink.git", rev="v2.1.0", default-features = false }
ink_lang = { version = "2.1.0", git="https://github.com/paritytech/ink.git", rev="v2.1.0", default-features = false }
ink_prelude = { version = "2.1.0", git="https://github.com/paritytech/ink.git", rev="v2.1.0", default-features = false }

scale = { package="parity-scale-codec", git="https://github.com/paritytech/parity-scale-codec", rev="parity-scale-codec-1.3.7", version = "1.3.7", default-features = false, features = ["derive"] }

[dependencies.type-metadata]
git = "https://github.com/type-metadata/type-metadata.git"
rev = "02eae9f35c40c943b56af5b60616219f2b72b47d"
default-features = false
features = ["derive"]
optional = true

# [patch.crates-io]
# arrayvec = { version = "0.4.12", path = "/safepkt-arrayvec" }
# rand = { version = "0.7.3", path = "/safepkt-rand" }
# smallvec = { version = "1.7.0", path = "/safepkt-rust-smallvec" }

[lib]
name = "safepkt_b7de9e5f7a"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
# verifier-klee = ["verification-annotations/verifier-klee"]
default = ["test-env"]
std = [
    "ink_abi/std",
    "ink_core/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "type-metadata/std",
]
test-env = [
    "std",
    "ink_lang/test-env",
]
ink-generate-abi = [
    "std",
    "ink_abi",
    "type-metadata",
    "ink_core/ink-generate-abi",
    "ink_lang/ink-generate-abi",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[target.'cfg(not(verify))'.dependencies]
proptest = { version = "0.10" }

[target.'cfg(verify)'.dependencies]
propverify = { git="https://github.com/thierrymarianne/contrib-rust-verification-tools.git", rev="e2f3c5c65a77" }
