[package]
name = "safepkt_b7de9e5f7a"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "CJDNS SASU"]
edition = "2018"

[dependencies]
safepkt_assert = { git="https://github.com/LedgerProject/safepkt_assert", rev="ddd0f25f291244508b5e32a16c811e1bcda1920b" }
verification-annotations = { git="https://github.com/thierrymarianne/contrib-rust-verification-tools.git", rev="e2f3c5c65a77", features = ["verifier-klee"], optional = true }
ink_primitives = { version = "2.1.0", git="https://github.com/LedgerProject/safepkt-ink", rev="2137ed9d87aa420da8895f241c2f8bef6385849d", default-features = false }
ink_abi = { version = "2.1.0", git="https://github.com/LedgerProject/safepkt-ink", rev="2137ed9d87aa420da8895f241c2f8bef6385849d", default-features = false, features = ["derive"], optional = true }
ink_core = { version = "2.1.0", git="https://github.com/LedgerProject/safepkt-ink", rev="2137ed9d87aa420da8895f241c2f8bef6385849d", default-features = false }
ink_lang = { version = "2.1.0", git="https://github.com/LedgerProject/safepkt-ink", rev="2137ed9d87aa420da8895f241c2f8bef6385849d", default-features = false }
ink_prelude = { version = "2.1.0", git="https://github.com/LedgerProject/safepkt-ink", rev="2137ed9d87aa420da8895f241c2f8bef6385849d", default-features = false }

scale = { package = "parity-scale-codec", version = "1.2", default-features = false, features = ["derive"] }

[dependencies.type-metadata]
git = "https://github.com/type-metadata/type-metadata.git"
rev = "02eae9f35c40c943b56af5b60616219f2b72b47d"
default-features = false
features = ["derive"]
optional = true

[lib]
name = "safepkt_b7de9e5f7a"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
verifier-klee = ["safepkt_assert/verifier-klee", "verification-annotations"]
default = ["test-env"]
std = [
    "ink_abi/std",
    "ink_core/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "type-metadata/std",
]
test-env = [
    "std",
    "ink_lang/test-env",
]
ink-generate-abi = [
    "std",
    "ink_abi",
    "type-metadata",
    "ink_core/ink-generate-abi",
    "ink_lang/ink-generate-abi",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[workspace]
members = [
	".ink/abi_gen"
]
exclude = [
	".ink"
]
